# digime

./: .gitignore  LICENSE  README.md
silo-bridge/: .env.example  .gitignore  README.md  main.py  orchestrator.py  pyproject.toml  requirements.txt  ticktick_oauth_flow.py
silo-bridge/config/: profile.yaml
silo-bridge/prompts/: system_prompt.txt
silo-bridge/tools/: __init__.py  gmail_tool.py  memory_store.py  memory_tool.py  profile_tool.py  slack_tool.py  summarizer.py  ticktick_tool.py  web_fetch_tool.py
