[project]
name = "silo-bridge"
version = "0.1.0"
description = "Personal AI assistant that bridges siloed data sources"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18.0",
    "anthropic>=0.39.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
# This is an application, not a library - don't build/install it
package = false
